# bayesian-segmentation

./: .gitignore  README.md
examples/: 5_dynamic_programming.py  BRK_POSITIONS.md  BRUTE_FORCE.md  DYNAMIC_PROGRAMMING.md  MULTINOMIAL.md  SEQUENCE.md  SINGLE_BRK.md  brk_positions.py  brute_force.py  dynamic_programming.py  multinomial.py  sequence.py  single_brk.py
guides/: BRK_POSITIONS.html  BRUTE_FORCE.html  COMPLETE.md  DYNAMIC_PROGRAMMING.html  DYNAMIC_PROGRAMMING.md  MULTINOMIAL.html  SEQUENCE.html  SEQUENCE.md  SINGLE_BRK.html  SINGLE_BRK.md
src/: seqseg.py
src/lib/: Cargo.toml
src/lib/src/: lib.rs  math.rs  prior.rs  util.rs
