[package]
name = "seqseg"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"
authors = ["Dragon1320"]
description = "A Bayesian sequence segmentation algorithm"
documentation = "https://github.com/Dragon1320/bayesian-segmentation"
readme = "README.md"
homepage = "https://github.com/Dragon1320/bayesian-segmentation"
repository = "https://github.com/Dragon1320/bayesian-segmentation"
publish = false

[lib]
crate-type = ["dylib"]

[dependencies]
lazy_static = "1.4"
ndarray = "0.15"
rug = "1.16"
